@@ -1,5 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.3.7.RELEASE</version>
+	</parent>
 	<groupId>no.nav.brevserver</groupId>
 	<artifactId>brevserver</artifactId>
 	<name>${project.artifactId}</name>
@@ -10,49 +16,43 @@
 		<module>brevserver-appconfig</module>
 		<module>brevserver-config</module>
 		<module>brevserver-server-common-java</module>
+		<module>brevserver-core</module>
 		<module>brevserver-consumer-joark-ejb</module>
-		<module>brevserver-j2ee</module>
+		<!--<module>brevserver-j2ee</module>-->
+		<module>repository</module>
+		<module>service</module>
+		<module>app</module>
 		<module>brevserver-klient-applet</module>
-		<module>brevserver-server-business-ejb</module>
-		<module>brevserver-server-comptest</module>
-		<module>brevserver-provider-ws</module>
+		<!--<module>brevserver-server-business-ejb</module>-->
+		<!--module>brevserver-server-comptest</module-->
+		<!--<module>brevserver-provider-ws</module>-->
 		<module>brevserver-asposeconfig</module>
+
 	</modules>
 
-	<properties>
-		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
-		<java.jdk.version>1.7</java.jdk.version>
 
-		<ibm.container.version>7.0.0</ibm.container.version>
-		<db2.jdbc.version>3.4.65</db2.jdbc.version>
-		<h2.jdbc.version>1.3.173</h2.jdbc.version>
-		<spring.framework.version>3.0.6.RELEASE</spring.framework.version>
-		<hibernate.framework.version>3.3.1.GA</hibernate.framework.version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>11</java.version>
 		<web.context.root>/brevweb</web.context.root>
-		<powermock.version>1.5.1</powermock.version>
+		<powermock.version>2.0.9</powermock.version>
 		<stelvio.version>2.2.0</stelvio.version>
 		<slf4j.version>1.7.5</slf4j.version>
+		<h2.version>1.4.195</h2.version>
+		<swagger.version>2.9.2</swagger.version>
+		<swagger-ui.version>3.9.2</swagger-ui.version>
+		<db2.jdbc.version>3.4.65</db2.jdbc.version>
+		<token-support.version>1.3.1</token-support.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
-	<distributionManagement>
-		<repository>
-			<id>m2internal</id>
-			<name>NAV Internal Repository</name>
-			<url>dav:http://maven.adeo.no/nexus/content/repositories/m2internal</url>
-		</repository>
-		<snapshotRepository>
-			<id>m2snapshot</id>
-			<name>NAV Snapshot Repository</name>
-			<url>dav:http://maven.adeo.no/nexus/content/repositories/m2snapshot</url>
-		</snapshotRepository>
-	</distributionManagement>
-
 	<scm>
-		<connection>scm:git:https://stash.adeo.no/scm/boaf/brevserver.git</connection>
-		<developerConnection>scm:git:https://stash.adeo.no/scm/boaf/brevserver.git</developerConnection>
-		<url>https://stash.adeo.no/projects/BOAF/repos/brevserver</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<connection>scm:git:https://github.com/navikt/brevserver.git</connection>
+		<developerConnection>scm:git:https://github.com/navikt/brevserver.git</developerConnection>
+		<url>https://github.com/navikt/brevserver.git</url>
+		<tag>HEAD</tag>
+	</scm>
 
 	<dependencyManagement>
 		<dependencies>
@@ -107,6 +107,21 @@
 			<dependency>
 				<groupId>no.nav.brevserver</groupId>
 				<artifactId>nav-brevserver-resource-config</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>service</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>repository</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>brevserver-core</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -203,24 +218,6 @@
 				<version>11.2.0</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ibm.db2</groupId>
-				<artifactId>db2jcc</artifactId>
-				<version>${db2.jdbc.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.ibm.db2</groupId>
-				<artifactId>db2jcc_license_cu</artifactId>
-				<version>${db2.jdbc.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.ibm.db2</groupId>
-				<artifactId>db2jcc_license_cisuz</artifactId>
-				<version>${db2.jdbc.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
 				<groupId>com.ibm</groupId>
 				<artifactId>com.ibm.mq</artifactId>
 				<version>7.0</version>
@@ -258,7 +255,7 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.0.13</version>
+				<version>1.2.3</version>
 			</dependency>
 			<dependency>
 				<groupId>rtv-brev</groupId>
@@ -327,11 +324,6 @@
 				<version>1.4.4</version>
 				<scope>provided</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-core</artifactId>
-				<version>${spring.framework.version}</version>
-			</dependency>
 
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -351,26 +343,42 @@
 				<version>1.1.0</version>
 				<classifier>jaxws</classifier>
 			</dependency>
-
 			<dependency>
-				<groupId>websphere</groupId>
-				<artifactId>com.ibm.ws.runtime</artifactId>
-				<version>${ibm.container.version}</version>
-				<scope>provided</scope>
+				<groupId>com.ibm.db2</groupId>
+				<artifactId>db2jcc4</artifactId>
+				<version>4.21.29</version>
 			</dependency>
 			<dependency>
-				<groupId>websphere</groupId>
-				<artifactId>com.ibm.jaxws.thinclient</artifactId>
-				<version>${ibm.container.version}</version>
-				<scope>provided</scope>
+				<groupId>com.ibm.db2</groupId>
+				<artifactId>db2jcc_license_cu</artifactId>
+				<version>${db2.jdbc.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>websphere</groupId>
-				<artifactId>com.ibm.ws.ejb.thinclient</artifactId>
-				<version>${ibm.container.version}</version>
-				<scope>provided</scope>
+				<groupId>com.ibm.db2</groupId>
+				<artifactId>db2jcc_license_cisuz</artifactId>
+				<version>${db2.jdbc.version}</version>
 			</dependency>
-
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-boot-starter</artifactId>
+				<version>3.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars</groupId>
+				<artifactId>swagger-ui</artifactId>
+				<version>${swagger-ui.version}</version>
+			</dependency>
+			<!--Swagger-->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>${swagger.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${swagger.version}</version>
+			</dependency>
 			<!-- Test dependencies -->
 			<dependency>
 				<groupId>no.nav.brevserver</groupId>
@@ -396,13 +404,13 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.11</version>
+				<version>4.12</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
-				<artifactId>mockito-all</artifactId>
-				<version>1.9.5</version>
+				<artifactId>mockito-core</artifactId>
+				<version>2.23.4</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -419,7 +427,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.powermock</groupId>
-				<artifactId>powermock-api-mockito</artifactId>
+				<artifactId>powermock-api-mockito2</artifactId>
 				<version>${powermock.version}</version>
 				<scope>test</scope>
 			</dependency>
@@ -430,39 +438,9 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-jdbc</artifactId>
-				<version>${spring.framework.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-jms</artifactId>
-				<version>${spring.framework.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-test</artifactId>
-				<version>${spring.framework.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-orm</artifactId>
-				<version>${spring.framework.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-nop</artifactId>
 				<version>${slf4j.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.h2database</groupId>
-				<artifactId>h2</artifactId>
-				<version>${h2.jdbc.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -484,10 +462,31 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.guava</groupId>
-				<artifactId>guava</artifactId>
-				<version>13.0.1</version>
+				<groupId>com.sun.xml.ws</groupId>
+				<artifactId>jaxws-ri</artifactId>
+				<version>2.3.2</version>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.istack</groupId>
+				<artifactId>istack-commons-runtime</artifactId>
+				<version>2.2</version>
 				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.security</groupId>
+				<artifactId>token-validation-spring</artifactId>
+				<version>${token-support.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.persistence</groupId>
+				<artifactId>persistence-api</artifactId>
+				<version>1.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -518,7 +517,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
@@ -526,7 +525,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito</artifactId>
+			<artifactId>powermock-api-mockito2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -548,8 +558,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
 					<configuration>
-						<source>${java.jdk.version}</source>
-						<target>${java.jdk.version}</target>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -601,68 +611,26 @@
 					</executions>
 				</plugin>
 				<plugin>
-					<artifactId>maven-ear-plugin</artifactId>
-					<version>2.8</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>2.3</version>
-				</plugin>
-				<plugin>
 					<artifactId>maven-ejb-plugin</artifactId>
 					<version>2.3</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-eclipse-plugin</artifactId>
-					<configuration>
-						<downloadSources>true</downloadSources>
-						<downloadJavadocs>true</downloadJavadocs>
-						<testSourcesLast>true</testSourcesLast>
-						<additionalConfig>
-							<file>
-								<name>.settings/org.eclipse.core.resources.prefs</name>
-								<content><![CDATA[
-									eclipse.preferences.version=1
-									encoding/<project>=${project.build.sourceEncoding}
-									]]>
-								</content>
-							</file>
-						</additionalConfig>
-					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>2.2.1</version>
 				</plugin>
 				<plugin>
-					<artifactId>maven-scm-plugin</artifactId>
-					<version>1.8.1</version>
-					<configuration>
-						<username>srvBrevOgArkiv</username>
-						<password>h4jro2vi352</password>
-					</configuration>
-				</plugin>
-				<plugin>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>2.5.3</version>
-					<configuration>
-						<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
-						<autoVersionSubmodules>true</autoVersionSubmodules>
-						<goals>deploy</goals>
-						<preparationGoals>clean install</preparationGoals>
-						<pomFileName>pom.xml</pomFileName>
-						<username>srvBrevOgArkiv</username>
-						<password>h4jro2vi352</password>
-					</configuration>
-				</plugin>
-				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.4.3</version>
+					<version>3.0.0-M3</version>
+					<configuration>
+						<argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens
+							java.base/jdk.internal.loader=ALL-UNNAMED
+						</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-report-plugin</artifactId>
-					<version>2.7.1</version>
+					<version>3.0.0-M3</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -683,45 +651,6 @@
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>build-helper-maven-plugin</artifactId>
 					<version>1.8</version>
-				</plugin>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-dependency-plugin</artifactId>
-										<versionRange>[2.1,)</versionRange>
-										<goals>
-											<goal>copy-dependencies</goal>
-											<goal>unpack-dependencies</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-eclipse-plugin</artifactId>
-										<versionRange>[2.9,)</versionRange>
-										<goals>
-											<goal>eclipse</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>no.nav.maven.plugins</groupId>
@@ -750,8 +679,8 @@
 				<configuration>
 					<toolchains>
 						<jdk>
-							<version>1.7</version>
-							<vendor>ibm</vendor>
+							<version>11</version>
+							<vendor>openjdk</vendor>
 						</jdk>
 					</toolchains>
 				</configuration>
@@ -771,7 +700,8 @@
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
-					<configLocation>http://confluence.adeo.no/download/attachments/12007/nav_checkstyle.xml</configLocation>
+					<configLocation>http://confluence.adeo.no/download/attachments/12007/nav_checkstyle.xml
+					</configLocation>
 					<excludes>**/*_*</excludes>
 				</configuration>
 			</plugin>
@@ -783,7 +713,7 @@
 				<artifactId>maven-pmd-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-					<targetJdk>1.6</targetJdk>
+					<targetJdk>11</targetJdk>
 					<rulesets>
 						<ruleset>http://confluence.adeo.no/download/attachments/12007/nav_pmd.xml</ruleset>
 					</rulesets>
